@@ -1,4 +1,4 @@
-h1. <%= version %> <%= Date.today %>
+h1. <span><%= Date.today %></span> Release <%= version %>
 
 h2. Initial release
 
