@@ -1,6 +1,11 @@
 <html>
   <head>
     <title>Release Notes</title>
+    <style>
+    * { font-family: serif;}
+    h1 { font-family: sans-serif; background-color: #ABABFF; padding: 10px;}
+    h1 span { font-size: 75%; font-weight: normal; float: right;}
+    </style>
   </head>
   <body>
     <%= release_notes_html %>
